--- a/file_檔案說明/檔案01_概念.md
+++ b/file_檔案說明/檔案01_概念.md
@@ -31,3 +31,13 @@
 
 ## 簡單位置
 file.py  沒有位置會找很久
+
+## 資料夾的位置
+C:/ 作業系統的檔案
+D:/ 自己的檔案
+
+## 資料夾的地址 (路徑 位址)
+D:\小蛋的作業
+
+## 檔案的路徑
+D:\小蛋的作業\我心中的幸福.doc
